# axum-fileserver

./: README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/2022-01-29-173452_create_users/: down.sql  up.sql
backend/src/: auth.rs  document.rs  error.rs  idl.rs  input.rs  main.rs  post.rs  project.rs
backend/src/database/: mod.rs  project.rs  user.rs
backend/src/policy/: authorization.polar
backend/src/user/: authentication.rs  delete.rs  get.rs  list.rs  login.rs  mod.rs  search.rs  signup.rs  update.rs
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/: app.css  app.html  hooks.js
frontend/src/lib/: form.js
frontend/src/lib/components/: ButtonDropdown.svelte
frontend/src/lib/filemanager/: CreateFolder.svelte  EditorDocument.svelte  ProjectTopMenu.svelte  RenderDocument.svelte  RichEditor.svelte  TableBreadcrumps.svelte  TableHeaderActions.svelte  TableMultipleSelections.svelte  TableRow.svelte  Uploader.svelte
frontend/src/lib/header/: Header.svelte
frontend/src/lib/services/: _server.js
frontend/src/routes/: [404].svelte  __error.svelte  __layout.svelte  index.svelte
frontend/src/routes/account/: index.json.js  index.svelte  logout.json.js
frontend/src/routes/auth/: login.js  logout.js
frontend/src/routes/login/: __layout.reset.svelte  index.json.js  index.svelte
frontend/src/routes/projects/: index.json.js  index.svelte  register.svelte
frontend/src/routes/users/: [uuid].json.js  [uuid].svelte  index.json.js  index.svelte
(+3 files in other folders)
